@@ -2,6 +2,7 @@
 ======
 - Added method to retrieve all names of specific caches from ICacheManager implementations.
 - Added method to clear all caches in ICacheManager implementations.
+- Added StringUtils.randomAlphanumeric(...) utility method.
 
 
 2.0.15
